--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "osr-rpc",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
   "main": "index.js",
   "directories": {
     "example": "example"
@@ -21,5 +20,6 @@
   "bugs": {
     "url": "https://github.com/oscava/osr-rpc/issues"
   },
-  "homepage": "https://github.com/oscava/osr-rpc#readme"
+  "homepage": "https://github.com/oscava/osr-rpc#readme",
+  "description": ""
 }
